# zed-spring-tools

./: .gitignore  .mailmap  AGENTS.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LIMITATIONS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs  extension.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  compatibility-report.yml  config.yml  parity-item.yml  proposal.yml
.github/workflows/: ci.yml  contributors.yml
bridge/: plugin.xml
coordinator/src/: bridge_session.mjs  java_transport.mjs  lsp.mjs  main.mjs
coordinator/test/: coordinator.test.mjs  java_transport.test.mjs  lsp.test.mjs
docs/: capability-delivery-plan.md  capability-inventory.md  code-lens-showcase.md  codelens-inlay-parity.md  implementation-plan.md
docs/decisions/: 001-local-first-parity-and-publication.md  002-pivot-to-versioned-coordination.md  003-java-companion-product-architecture.md  004-product-stack-build-and-packaging.md  005-lsp-first-capability-delivery.md  006-capability-first-java-compatibility-and-reporting.md  README.md  template.md
docs/research/: 001-zed-extension-language-server-lifecycle.md  002-spring-tools-language-server-execution-model.md  003-jdtls-execution-and-zed-integration.md  004-integration-structure-candidates.md  005-distribution-and-licensing.md  README.md  (+15 more)
protocol/: bridge-registration.schema.json  java-providers.json  spring-artifacts.json
scripts/: generate-contributors.mjs  prepare-local-poc.mjs  verify-bridge.mjs
src/: artifacts.rs  lib.rs  platform.rs  runtime.rs
(+142 files in other folders)
